<resources>
    <string name="app_name">"My life as a lazy bacon simulator : the student dead line attack "</string>
    <string name="title_home">Home</string>
    <string name="title_learderboard">Learderboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_option">Option</string>
    <string name="title_lvl1">Lvl 1</string>
    <string name="title_lvl2">Lvl 2</string>
    <string name="title_lvl3">Lvl 3</string>
    <string name="title_lvl4">Lvl 4</string>
    <string name="title_lvl5">Lvl 5</string>
    <string name="title_profil">Profil</string>
    <string name="title_profil_option">Profil option</string>
    <string name="friends">Friends</string>
    <string name="main_menu">Main menu</string>
    <string name="resultat">Résultat</string>
    <string name="add_friend">Add a friend</string>
    <string name="back_world">Back to world</string>
    <string name="friend_name">friendname</string>
    <string name="friend_id">friend id</string>
    <string name="suivant">Suivant</string>
    <string name="precedant">Precedant</string>
    <string name="retry">Ressayer</string>
    <string name="friend_lvl">1</string>
    <string name="player_lvl">1</string>
    <string name="player_name">player_name</string>
    <string name="player_id">player_id</string>
    <string name="player_id_txt">Player ID:</string>
    <string name="btn_change_username">Changer votre nom de joueur</string>
    <string name="btn_change_password">Changer votre mot de passe</string>
    <string name="btn_change_email">Changer votre adresse email</string>
    <string name="btn_change_signature">Changer votre signature</string>
    <string name="btn_back_to_profil">Retourner au profil</string>
    <string name="lpassword">Votre mot de passe:</string>
    <string name="lusername">Votre pseudo:</string>
    <string name="btn_login">Entrez</string>
    <string name="play">Play</string>
    <string name="as_guess">Jouer entant qu\'invité</string>
    <string name="enregistrer">S\'enregistrer</string>
    <string name="votre_nom">Votre nom :</string>
</resources>
