<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_learderboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_learderboard" />

    <item
        android:id="@+id/navigation_option"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_option" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_"
        android:icon="@drawable/option_button"
        android:title="@string/title_option" />
    <item
    android:id="@+id/navigation_profil_option"
    android:icon="@drawable/ic_notifications_black_24dp"
    android:title="@string/title_profil_option" />
</menu>
