<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="263dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="20px"
                android:background="@drawable/barre_vide"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_id_txt"
                    android:textColor="@color/red"
                    android:textAlignment="viewStart"
                    android:textSize="12dp"/>

                <TextView
                    android:id="@+id/txtPlayerId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_id"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="18dp"/>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgbtnAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/crown" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_change_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/barre_vide"
        android:text="@string/btn_change_username" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/barre_vide"
        android:text="@string/btn_change_password" />

    <Button
        android:id="@+id/btn_change_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/barre_vide"
        android:text="Button"
        tools:text="@string/btn_change_email" />

    <Button
        android:id="@+id/btn_change_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/barre_vide"
        android:text="@string/btn_change_signature" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_back_to_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/barre_vide"
            android:text="@string/btn_back_to_profil" />
    </LinearLayout>
</LinearLayout>