<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:text="@string/lusername"
        android:id="@+id/textView4"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/txtUsername"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lpassword"
        android:id="@+id/textView7"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_above="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_login"

        android:layout_below="@+id/txtPassword"
        android:layout_alignEnd="@+id/txtPassword"
        android:layout_marginTop="18dp" />

</RelativeLayout>