<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_player_option" />

        <Button
            android:id="@+id/btnFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_friend" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnProfil"
            android:layout_toRightOf="@+id/btnFriends"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profilName"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:background="@drawable/barre_vide"
                android:text="profil name"
                android:textAlignment="center"
                android:textColor="#ff0000"
                android:textSize="30dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLvl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnFriends"
            android:layout_marginStart="77dp"
            android:layout_marginTop="41dp"
            android:background="@drawable/btn_empty"
            android:text="@string/title_lvl5" />

        <Button
            android:id="@+id/btnLvl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@drawable/btn_empty"
            android:text="@string/title_lvl4"
            android:layout_below="@+id/btnLvl5"
            android:layout_toEndOf="@+id/btnLvl1"
            android:layout_marginStart="12dp" />

        <Button
            android:id="@+id/btnLvl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_empty"
            android:text="@string/title_lvl3"
            android:layout_below="@+id/btnLvl4"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/btnLvl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_empty"
            android:text="@string/title_lvl2"
            android:layout_below="@+id/btnLvl3"
            android:layout_toStartOf="@+id/btnLvl3"
            android:layout_marginTop="18dp" />

        <Button
            android:id="@+id/btnLvl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="80dp"
            android:background="@drawable/btn_empty"
            android:text="@string/title_lvl1"
            android:layout_marginStart="14dp"
            android:layout_below="@+id/btnLvl2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="21dp" />

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>